[metadata]
name = zCluster
author = Matt Hilton + zCluster Contributors
author_email = matt.hilton@wits.ac.za
url = https://github.com/ACTCollaboration/zCluster
description = A code for measuring galaxy cluster photometric redshifts
long_description = file: README.rst
keywords = astrophysics
license = GPL v3
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX
    Topic :: Scientific/Engineering :: Astronomy

[versioneer]
VCS = git
style = pep440
versionfile_source = zCluster/_version.py
versionfile_build = zCluster/_version.py
tag_prefix = v
parentdir_prefix = zCluster-

[options]
install_requires =
    astropy >= 4.0
    numpy >= 1.19
    matplotlib >= 2.0
    astLib >= 0.11.10
    scipy >= 1.0
    requests
